--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
         letter-spacing: 6px;
       }
       main {
-        max-width: 600px;
+        margin: 0 auto;
+        overflow: scroll;
       }
       footer {
-        bottom: 0;
-        position: absolute;
         display: block;
         width: 100%;
         background-color: #ff4646;
+        height: 85px;
       }
       #footer-container {
         display: flex;
@@ -49,6 +49,7 @@
         bottom: 0;
         width: 100%;
         margin: 0 auto;
+        max-width: 600px;
       }
       #input-area {
         width: 100%;
@@ -76,10 +77,17 @@
         width: 43px;
         margin-left: auto;
       }
+      #button-container i {
+        padding-top: 20px;
+        cursor: pointer;
+        color: #f5f7fa;
+      }
       #text-area {
         width: 100%;
       }
-      #text-area textarea {
+      #comment {
+        padding: 0 0 0 2%;
+        width: 98%;
         border: none;
         -moz-appearance: none;
         -webkit-appearance: none;
@@ -87,30 +95,23 @@
         width: 100%;
         border-radius: 10px;
       }
-      .chatText {
-        border: 2px solid #ccc;
-        padding: 10px;
-        width: 90%;
-        margin-right: 0.5%;
-        border-radius: 5px;
-      }
-      .sendButton {
-        width: 9%;
-        background: rgb(130, 224, 255);
-        border: none;
-        padding: 10px;
-        border-radius: 5px;
+      #user-name-input {
+        padding: 0 0 0 2%;
+        width: 98%;
       }
       #timeline {
         list-style-type: none;
         margin: 0;
-        padding: 0;
+        padding: 30px;
       }
       #timeline li {
-        padding: 5px 10px;
+        padding-bottom: 15px;
+        font-size: 15px;
+        word-break: break-word;
       }
-      #timeline li:nth-child(odd) {
-        background: #eee;
+      #timeline li span {
+        font-size: 12px;
+        color: #898989;
       }
     </style>
     <link
@@ -122,7 +123,7 @@
     <header>
       <h1>CHAUT</h1>
     </header>
-    <main>
+    <main id="main">
       <ul id="timeline"></ul>
     </main>
     <footer>
@@ -131,7 +132,7 @@
           <div id="input-area">
             <span>name</span>
             <div id="user-name">
-              <input autocomplete="off" />
+              <input id="user-name-input" autocomplete="off" />
             </div>
             <div id="text-area">
               <textarea id="comment" placeholder="comment"></textarea>
@@ -150,17 +151,26 @@
         var socket = io()
         $("form").submit(() => {})
         socket.on("chat message", (msg) => {
-          $("#timeline").append($("<li>").text(msg))
+          msg
+          $("#timeline").append(
+            $("<li>")
+              .append(`<span>@${msg.userName}</span><br />`)
+              .append(msg.comment.replace(/\r?\n/g, "<br>"))
+          )
         })
+        let wh = window.innerHeight
+        const mainHeight = wh - 85 - 48
+        document.getElementById("main").style.height = mainHeight + "px"
       })
       const hoge = () => {
         var socket = io()
-        const msg = $("#comment").val()
-        if (msg === "") {
+        const comment = $("#comment").val()
+        const userName = $("#user-name-input").val()
+        if (comment === "") {
           return false
         }
-        socket.emit("chat message", msg)
-        $("#chatText").val("")
+        socket.emit("chat message", { userName: userName, comment: comment })
+        $("#comment").val("")
         return false
       }
     </script>
