--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width" />
     <title>CHAUT</title>
     <style>
       * {
@@ -78,7 +79,8 @@
         margin-left: auto;
       }
       #button-container i {
-        padding-top: 20px;
+        font-size: 20px;
+        padding-top: 35px;
         cursor: pointer;
         color: #f5f7fa;
       }
