--- a/index.html
+++ b/index.html
@@ -59,12 +59,14 @@
         letter-spacing: 1.2pt;
       }
       #input-area span {
-        font-size: 15px;
+        font-size: 18px;
         width: 20%;
         float: left;
         padding-top: 2px;
       }
       #input-area input {
+        height: 25px;
+        font-size: 18px;
         width: 80%;
         border: none;
         border-radius: 5px;
@@ -88,14 +90,19 @@
         width: 100%;
       }
       #comment {
-        padding: 0 0 0 2%;
+        font-size: 18px;
+        height: 25px;
+        padding: 1% 0 1% 2%;
         width: 98%;
         border: none;
         -moz-appearance: none;
         -webkit-appearance: none;
         /* resize: none; */
         width: 100%;
-        border-radius: 10px;
+        border-radius: 5px;
+      }
+      #comment::placeholder {
+        font-size: 12px;
       }
       #user-name-input {
         padding: 0 0 0 2%;
