--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         background-color: #f5f7fa;
       }
       header {
+        position: absolute;
+        width: 100%;
         height: 48px;
         background-color: #ff4646;
       }
@@ -30,14 +32,16 @@
         letter-spacing: 6px;
       }
       main {
+        padding-top: 48px;
         margin: 0 auto;
         overflow: scroll;
       }
       footer {
+        position: absolute;
+        bottom: 0;
         display: block;
         width: 100%;
         background-color: #ff4646;
-        height: 85px;
       }
       #footer-container {
         display: flex;
@@ -168,8 +172,16 @@
           )
         })
         let wh = window.innerHeight
-        const mainHeight = wh - 85 - 48
+        const mainHeight = wh - 84
         document.getElementById("main").style.height = mainHeight + "px"
+
+        let textarea = document.getElementById("comment")
+        let clientHeight = textarea.clientHeight
+
+        textarea.addEventListener("input", () => {
+          textarea.style.height = clientHeight + "px"
+          textarea.style.height = textarea.scrollHeight + "px"
+        })
       })
       const hoge = () => {
         var socket = io()
