--- a/index.html
+++ b/index.html
@@ -179,6 +179,10 @@
         let clientHeight = textarea.clientHeight
 
         textarea.addEventListener("input", () => {
+          if (textarea.scrollHeight > 134) {
+            textarea.style.height = "134px"
+            return
+          }
           textarea.style.height = clientHeight + "px"
           textarea.style.height = textarea.scrollHeight + "px"
         })
